--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
+/* custom css */
+.headerCustom,.footerCustom{
+  background-color: #1e293b;
+}
+
+
+/* custom css */
+
 :root {
   --primary: #497573;
   --secondary: #99f7f2;
